<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/gameType"
        android:textStyle="bold" />
    
    <RadioGroup
           android:id="@+id/gameType"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:focusableInTouchMode="true"
           android:focusable="true">
		    
	        <RadioButton
	               android:id="@+id/iSpy"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:checked="true"
	               android:text="@string/game1"
	               android:clickable="true" />
	
	        <RadioButton
	            android:id="@+id/assOrElbow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="39dp"
	            android:text="@string/game2"
	            android:clickable="true" />
	        
    </RadioGroup>

   <Button
            android:id="@+id/captureAndCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/captureAndCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageLayout">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="fill_parent"
                android:layout_height="275dp"
                android:layout_margin="5dp"
                android:background="@drawable/image_view_background"
                android:contentDescription="@string/picture" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/puzzle_preview" 
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </RelativeLayout>

		<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageLayout"
            android:layout_alignBottom="@+id/imageLayout">
            
		    <ImageView
                android:id="@+id/crop"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/pic_border"
                android:contentDescription="@string/picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/answer_preview"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
		    
	     </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/hintLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/hint"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_placeholder"
        android:inputType="text" />
		

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/answer"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/answerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/answer_placeholder"
        android:inputType="text" />

    <Button
        android:id="@+id/createGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game" />
    	</LinearLayout>
    </ScrollView>
