<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <LinearLayout
        android:focusable="true" 
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
     <TextView
        android:id="@+id/gameTypeTextPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/placeholder_text"
        android:textStyle="bold" />

     <ImageView
         android:id="@+id/picturePlay"
         android:layout_width="fill_parent"
         android:layout_height="275dp"
         android:layout_margin="5dp"
         android:background="@drawable/image_view_background"
         android:contentDescription="@string/picture"/>

    <TextView
        android:id="@+id/hintTextPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/hint"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answerFormatPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/answer"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/answerTextPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/guess_prompt"
        android:inputType="text" />

    <Button
        android:id="@+id/submitAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_answer" />

	</LinearLayout>
</ScrollView>