<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats_win"
        android:layout_margin="3dp"
        android:textStyle="bold" />
    
    <ImageView
         android:id="@+id/pictureWin"
         android:layout_width="fill_parent"
         android:layout_height="275dp"
         android:layout_margin="5dp"
         android:background="@drawable/image_view_background"
         android:contentDescription="@string/picture"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_reveal"
        android:layout_margin="3dp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/gameWinAnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_text"
        android:layout_margin="3dp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/goHomeWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" 
            android:layout_weight="1"/>
        
        <Button
            android:id="@+id/goGameListWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_game_again" 
            android:layout_weight="1"/>
            
        
    </LinearLayout>
    

</LinearLayout>
