<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image_view_background"
                android:contentDescription="@string/picture" 
                android:scaleType="centerCrop"
                android:src="@drawable/eye_spy"/>
            
                <Button
			        android:id="@+id/gotoCreateGame"
			        android:layout_width="140dp"
			        android:layout_height="wrap_content"
			        android:text="@string/create_game"
			        android:layout_alignParentBottom="true"
			        android:background="#B0e6e7e8"
			        android:layout_margin="5dp" />

			    <Button
			        android:id="@+id/gotoListGames"
			        android:layout_width="140dp"
			        android:layout_height="wrap_content"
			        android:text="@string/game_list" 
			        android:layout_alignParentBottom="true"
			        android:layout_alignParentRight="true"
			        android:background="#B0e6e7e8"
			        android:layout_margin="5dp"/>
			    
			    
    <!--  
    <Button
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Test Button" /> -->

        </RelativeLayout>


